Add JVM argument to enable native access
Allows JNA to work on JDK 24+